# summx

./: .gitignore  LICENSE  README.md  plan.md  plan2.md  pyproject.toml  structure.md
src/summx/: config.py  prompts.py
src/summx/agent/: __init__.py  executor.py  planner.py
src/summx/cli/: main.py
src/summx/llm/: __init__.py  base.py  groq_client.py  openai_client.py
src/summx/mcp/: __init__.py  arxiv_client.py  session.py
src/summx/models/: __init__.py  paper.py  plan.py
src/summx/sources/: __init__.py  arxiv_api_client.py  base.py
src/summx/ui/: main.py
tests/: conftest.py  test_cli.py  test_config.py  test_executor.py  test_llm.py  test_mcp_client.py  test_models.py  test_planner.py  test_sources.py
