[project]
name = "summx"
version = "0.1.0"
description = "SummX — A local AI-powered agent for summarizing arXiv papers using MCP and multi-LLM backends"
readme = "README.md"
requires-python = ">=3.11,<3.13"

authors = [
  { name = "Andrew Maner", email = "andrew.maner@bizztech.com" }
]

license = { text = "MIT" }

dependencies = [
  # Core
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0.0",

  # CLI
  "typer>=0.12.0",

  # UI
  "streamlit>=1.33.0",

  # LLM Providers
  "openai>=1.0.0",
  "groq>=0.8.0",

  # MCP Python SDK
  "mcp-python>=0.1.2",

  # Async / utilities
  "rich>=13.6.0",

  # MCP Server dependencies
  "PyMuPDF>=1.24.1",

  # arXiv API Client
  "arxiv>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
summx = "summx.cli.main:app"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["tests/test_cli.py"]
